# proyecto-aldo-vergara

./: CMakeLists.txt  estudiante.h  main.cpp
include/: .gitignore  Curso.h  Estudiante.h  Persona.h  Sistema.h
src/: Estudiante.cpp  Persona.cpp  Sistema.cpp  main.cpp
